--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -132,7 +132,7 @@ pipeline {
                 sh '''
                         oc project ${STAGE_PROJECT}
                         oc new-app --as-deployment-config --name books -i books:stage
-                        oc expose scv/${APP_NAME}
+                        oc expose svc/${APP_NAME}
                    '''
             }
         }
